PLT-6278 Fixed not being able to open custom theme sections on iOS (#6259)

--- a/webapp/sass/routes/_settings.scss
+++ b/webapp/sass/routes/_settings.scss
@@ -273,6 +273,10 @@
                         display: none;
                         margin: 0 20px 0 0;
                         padding: 20px 0 0 20px;
+
+                        &.open {
+                            display: block;
+                        }
                     }
 
                     .custom-label {
